Added additional account details
